# Loader-Game

./: .gitignore  CMakeLists.txt  FieldFlags.h  GridWindow.cpp  GridWindow.h  GridWindow.ui  README.md  loadermain.cpp  mazes.json  resource.qrc  sokobanmain.cpp
GridGenerator/: GridFromFile.cpp  GridGenerator.cpp  GridGenerator.h  GridMazes.cpp  RandomGridGenerator.cpp  TestGridGenerator.cpp
MVC/: GridDelegate.cpp  GridDelegate.h  GridModel.cpp  GridModel.h  GridTableView.cpp  GridTableView.h  JsonStorage.cpp  JsonStorage.h
Model/: GridModel.cpp  GridModel.h  SokobanModel.cpp  SokobanModel.h  StepCommand.cpp  StepCommand.h
StatStorage/: StatStorage.cpp  StatStorage.h
other/: bgTitle.xlsx
resources/: DynamicForeground.qml  GameplayToolBar.qml  GridDelegate.qml  GridModel.qml  LoaderGirdButton.qml  LoaderGridDelegate.qml  ModelDelegate.qml  PlayerAnimation.qml  README.md  SokobanAnimatedSprite.qml  SpriteBackground.qml  SpriteForeground.qml  WindowGameplay.qml  WindowHeader.qml  WindowLvlsList.qml  WindowMainMenu.qml  WindowMenu.qml  WindowStats.qml  canvas.js  main.qml  scripts.js  sokoban.qml
resources/gameplay/: Button.qml  DynamicForeground.qml  Info.qml  InfoLabel.qml  LvlComplete.qml  ManageButton.qml  PlayerAnimation.qml  SpriteBackground.qml  SpriteForeground.qml  ToolBar.qml
resources/items/: Button.qml  Rectangle.qml  Spacer.qml  Text.qml
resources/mainmenu/: MenuBackground.qml  MenuButton.qml  MenuLvlsList.qml  MenuStats.qml  Navigation.qml
